# k8s-bare-metal

./: .gitignore  DEVELOPING.md  README.md  macos.sh  output.sh  pyproject.toml  requirements.txt  test.sh
scripts/: encrypt.sh  httpbin.sh  microk8s.sh  mk8s-addons.sh  sshd.sh  ufw-basic.sh  ufw-cluster.sh  users.sh
scripts/data/: apiserver  example.ca.pub  example.encryption.key  httpbin.yaml  revision
src/mk8sup/: __init__.py
templates/: cloud-config.sh  cloudflared.sh  encrypt.sh  httpbin.sh  microk8s.sh  mk8s-addons.sh  sshd.sh  ufw-cluster.sh  users.sh
templates/data/: example.authorized_keys
templates/partials/: encryption  random32
