[project]
name = "mk8sup"
version = "0.0.1"
authors = [
  { name="Abhishek Tiwari", email="abhishek@abhishek-tiwari.com" },
]
description = "Bootstrap Microk8s over SSH"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1",
    "paramiko>=3.4.0"
]

[project.scripts]
mk8sup = "mk8sup:cli"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/abhishektiwari/k8s-bare-metal-microk8s"
Issues = "https://github.com/abhishektiwari/k8s-bare-metal-microk8s/issues"